--- a/README
+++ b/README
@@ -1,1 +1,17 @@
 
+# Snort - Live Attack Simulation
+
+This lab simulates a brute-force attack on a Virtual Machine (VM) provided by TryHackMe. Our objective is to analyze network traffic and packet logs using Snort, an Intrusion Detection System (IDS) and Intrusion Prevention System (IPS). Through this analysis, we aim to detect and assess potential security threats, enhancing our understanding of network security and intrusion detection techniques.
+
+### Key Objectives:
+**Traffic Analysis**: Utilize Snort to capture and inspect network traffic for suspicious activity.
+
+**Threat Detection**: Identify anomalies indicative of brute-force attacks on the system.
+
+**Mitigation Strategy**: Develop and deploy a custom Snort rule to detect and prevent unauthorized access attempts.
+
+This project strengthens expertise in network security, intrusion detection, and proactive threat prevention, making it a valuable addition to a cybersecurity portfolio.
+
+See the PDF attachment below for documentation:
+
+
